# simple-website-change-detection

./: README.md  check_websites.py  log.md  pyproject.toml  queries.json
.github/workflows/: check_websites_weekly.yml
